# kpad

./: .code_collect_criteria.ccc  .gitignore  CLAUDE.md  README.md  instructions.md
docs/: PLUGIN_DEVELOPMENT.md
kpad/src/: main.rs  utils.rs
kpad/src/editor/: builtin_commands.rs  clipboard.rs  highlight.rs  movement.rs  screens.rs  undo.rs
winpad/: .gitignore  Cargo.toml  README.md
winpad/plugins/markdown_highlight/: main.rhai  plugin.toml
winpad/plugins/trim_whitespace/: main.rhai  plugin.toml
winpad/plugins/uppercase/: main.rhai  plugin.toml
winpad/src/: buffer.rs  commands.rs  editor.rs  main.rs  plugins.rs  terminal.rs  types.rs  utils.rs
winpad/src/editor/: builtin_commands.rs  clipboard.rs  file_ops.rs  highlight.rs  input.rs  mod.rs  movement.rs  render.rs  screens.rs  undo.rs
winpad/src/plugins/: api.rs  mod.rs
