[package]
name = "kpad"
version = "0.1.0"
edition = "2021"

[lints.rust]
dead_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
unicode-width = "0.2"
arboard = "3"
rhai = { version = "1", features = ["std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
ropey = "1"

